--- a/.env
+++ b/.env
@@ -1,23 +1,7 @@
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/insecure2secure
-# Or for Atlas: mongodb+srv://<username>:<password>@cluster0.mongodb.net/insecure2secure
-
-# Security
-JWT_SECRET=your-very-long-and-secure-secret-key-here
-JWT_EXPIRY=24h
-BCRYPT_ROUNDS=12
-
-# Server Configuration
-PORT=5000
+// filepath: .env
 NODE_ENV=development
-
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://insecure2secure.com
-
-# Logging
-LOG_LEVEL=debug
-LOG_FILE=./logs/app.log
-
-# Backup Configuration
-BACKUP_PATH=./backups
-BACKUP_FREQUENCY=24h
+PORT=5000
+MONGODB_URI=mongodb://localhost:27017/insecure2secure
+JWT_SECRET=your-very-secure-jwt-secret-key
+JWT_EXPIRE=24h
+FRONTEND_URL=http://localhost:3000
